--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6"
